# hermes-agent-001

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  LICENSE  README.md  SECURITY.md  SOP.md  SUPPORT.md  biome.json  hermes-agent-001.code-workspace  log.md  package-lock.json  package.json  pyproject.toml  turbo.json
.claude/: settings.json
.codex/rules/: default.rules
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.host-ollama.json  devcontainer.json  docker-compose.yml  on-create.sh  post-create.sh  post-start.sh
.devcontainer/hermes-backup/: .gitignore  SOUL.md  bashrc-additions.sh  config.yaml  dot-env-template  gitconfig-template  ollama-models.txt
.devcontainer/scripts/: backup-hermes-config.sh  check-package-updates.sh  check-python-package-updates.sh  update-tools.sh
.github/: copilot-instructions.md  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  bug_report.yml  docs.md  feature.md  feature_request.yml
.github/prompts/: project-init.prompt.md
.github/workflows/: ci.yml
docs/: CODE_OF_CONDUCT.ja.md  CONTRIBUTING.ja.md  README.ja.md  SECURITY.ja.md  SUPPORT.ja.md  customization.md  devcontainer-operations.md  project-init.ja.md  project-init.md
docs/ai-agent/: AI-driven-development-common-guideline.md  general-AI-agent-conduct-principles.md
tests/: check-package-updates.bats  check-python-package-updates.bats  functions.bash  on-create.bats  post-create.bats  post-start.bats  retry.bats  update-tools.bats
(+122 files in other folders)
